# mlfow-test

./: README.md  dagshub.ipynb  mlfow.ipynb  pyproject.toml
data/: literacy_rates_clean.csv
mlartifacts/599839046319326436/3261a688b24e4055aa8cf7bf005db8fb/artifacts/model/: MLmodel  conda.yaml  python_env.yaml
mlruns/0/: meta.yaml
mlruns/599839046319326436/: meta.yaml
mlruns/599839046319326436/149ae4c01f224e39a38fc463f2867a1d/: meta.yaml
mlruns/599839046319326436/149ae4c01f224e39a38fc463f2867a1d/metrics/: Mean Absolute Error  Mean Squared Error  R-Squared  Root Mean Squared Error
mlruns/599839046319326436/149ae4c01f224e39a38fc463f2867a1d/tags/: mlflow.source.name
mlruns/599839046319326436/3261a688b24e4055aa8cf7bf005db8fb/: meta.yaml
mlruns/599839046319326436/3261a688b24e4055aa8cf7bf005db8fb/tags/: mlflow.log-model.history  mlflow.runName
mlruns/599839046319326436/495065c9c3034435908948b8e7037d7c/: meta.yaml
mlruns/599839046319326436/495065c9c3034435908948b8e7037d7c/metrics/: Mean Absolute Error  Mean Squared Error  R-Squared  Root Mean Squared Error
mlruns/599839046319326436/77e9b17c65454ad8bd52635212341f9e/: meta.yaml
mlruns/599839046319326436/77e9b17c65454ad8bd52635212341f9e/metrics/: mae  mse  r2  rmse
mlruns/599839046319326436/77e9b17c65454ad8bd52635212341f9e/tags/: mlflow.log-model.history
mlruns/599839046319326436/b9916c0d12274b4798bc1877eb408795/: meta.yaml
mlruns/599839046319326436/b9916c0d12274b4798bc1877eb408795/metrics/: Mean Absolute Error  Mean Squared Error  R-Squared  Root Mean Squared Error
(+5 files in other folders)
