[tool.poetry]
name = "mlflow-test"
version = "0.1.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
dagshub = "^0.4.2"
mlflow = "^2.19.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
lazypredict = "^0.2.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
